fixed the container collapse on the navigation and the text resizing for smaller screen width devices

--- a/css/site.css
+++ b/css/site.css
@@ -9,18 +9,22 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3 {
-  font-family: Limelight, "Century Gothic", AppleGothic, sans-serif;
+h1,
+h2,
+h3 {
+  font-family: Limelight, 'Century Gothic', AppleGothic, sans-serif;
   font-weight: bold;
 }
 
-h4, h5, h6 {
+h4,
+h5,
+h6 {
   font-weight: bold;
 }
 
 h1.title {
   padding: 40px 0;
-  background-color: #3E295F;
+  background-color: #3e295f;
   border-bottom: 4px solid #524866;
   color: #efefef;
 }
@@ -38,14 +42,7 @@ h1.title {
 .hero {
   margin: 0;
   padding: 0;
-  background:
-    /* top, transparent with gradient */
-    linear-gradient(
-      45deg,
-      rgba(60, 15, 104, 0.7),
-      rgba(155, 77, 202, 0.7)
-    ),
-    /* bottom, image */
+  background: linear-gradient(45deg, rgba(60, 15, 104, 0.7), rgba(155, 77, 202, 0.7)),
     url(../img/Will-Rogers-Street-Elevation-8X5-150dpi.jpg);
   background-attachment: fixed;
   background-position: center bottom;
@@ -66,8 +63,7 @@ h1.title {
   text-align: center;
 }
 .hero .intro h1,
-.hero .intro h2
-{
+.hero .intro h2 {
   display: inline-block;
   width: auto;
   padding: 0px 20px;
@@ -77,7 +73,22 @@ h1.title {
   line-height: 1.5em;
   text-align: center;
 }
+@media only screen and (max-width: 900px) {
+  .hero .intro h1,
+  .hero .intro h2 {
+    font-size: 3rem;
+  }
+}
 
+@media only screen and (max-width: 600px) {
+  .hero {
+    height: 400px;
+  }
+  .hero .intro h1,
+  .hero .intro h2 {
+    font-size: 2rem;
+  }
+}
 /**
  * Main website sections
  */
@@ -89,7 +100,7 @@ section.main-section h2 {
   display: inline-block;
   margin: 0 auto;
   margin-bottom: 1.5em;
-  font-family: 'Poiret One', "Century Gothic", AppleGothic, sans-serif;
+  font-family: 'Poiret One', 'Century Gothic', AppleGothic, sans-serif;
   text-align: center;
   border-bottom: 1px solid #333;
 }
@@ -97,7 +108,7 @@ section.main-section p {
   font-size: 1.4em;
 }
 section.main-section a.button {
-  font-family: 'Poiret One', Limelight, "Century Gothic", AppleGothic, sans-serif;
+  font-family: 'Poiret One', Limelight, 'Century Gothic', AppleGothic, sans-serif;
   font-weight: bold;
   height: 4.8rem;
   line-height: 4.8rem;
@@ -135,7 +146,7 @@ article.sponsorship-package li.highlight {
  * Buttons
  */
 .button {
-  font-family: 'Poiret One', Limelight, "Century Gothic", AppleGothic, sans-serif;
+  font-family: 'Poiret One', Limelight, 'Century Gothic', AppleGothic, sans-serif;
   font-size: 100%;
 }
 
@@ -144,7 +155,7 @@ article.sponsorship-package li.highlight {
  */
 .navigation {
   background: #333;
-  border-bottom: .1rem solid #937042;
+  border-bottom: 0.1rem solid #937042;
   display: block;
   height: 5.2rem;
   left: 0;
@@ -163,11 +174,12 @@ article.sponsorship-package li.highlight {
 }
 .navigation .navigation-link {
   display: inline;
-  padding-left: 30px;
+  padding-left: 15px;
+  flex: 1;
 }
 .navigation a.button {
   display: inline-block;
-  margin-left: 30px;
+  margin-left: 10px;
 }
 .navigation .text-right {
   display: inline-block;
@@ -175,7 +187,9 @@ article.sponsorship-package li.highlight {
   margin-left: 30px;
 }
 
-.navigation .navigation-link, .navigation .navigation-title, .navigation .title {
+.navigation .navigation-link,
+.navigation .navigation-title,
+.navigation .title {
   color: #bf9865;
   display: inline-block;
   font-size: 1.6rem;
@@ -183,10 +197,11 @@ article.sponsorship-package li.highlight {
   text-decoration: none;
 }
 
-.navigation .navigation-title, .navigation .title {
+.navigation .navigation-title,
+.navigation .title {
   color: #bf9865;
-  font-family: Limelight, "Century Gothic", AppleGothic, sans-serif;
-  font-size: 2.60rem;
+  font-family: Limelight, 'Century Gothic', AppleGothic, sans-serif;
+  font-size: 2.6rem;
   letter-spacing: 2px;
   line-height: 5.6rem;
   position: relative;
@@ -205,10 +220,12 @@ article.sponsorship-package li.highlight {
   justify-content: space-between;
 }
 .flex-left {
-  justify-content: flex-start;
+  align-items: flex-start;
 }
 .flex-right {
-  justify-content: flex-end;
+  display: flex;
+  height: 55px;
+  align-items: flex-end;
 }
 
 /**
@@ -234,14 +251,13 @@ article.sponsorship-package li.highlight {
  * Schedule
  */
 .schedule {
-
 }
 .schedule h3 {
   border-bottom: 1px solid #333;
 }
 .schedule .timeslot {
   background: rgba(60, 15, 104, 0.7);
-      /* rgba(155, 77, 202, 0.7) */
+  /* rgba(155, 77, 202, 0.7) */
   color: #fff;
   font-size: 1.2em;
   font-weight: bold;
